Fixing the Nav bar. Set a height, set the Nav bar contents in an absolute position, and nested my links in a div. I nested my links in a div because I found when I set their positions to absolute they overlap each other. Setting a position on the div instead prevents overlap. Now I need to fix the position of my login, signup forms and fix the positioning of my dashboard layout so it's not overlapping my Nav.

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -27,10 +27,12 @@ body {
 	justify-content: center;
 }
 
-// Header of Kanban
-.MainHeader {
+.MainHeader{
+	position: absolute;
+	width: 100%;
+	height: 2.25rem;
 	display: flex;
-	flex-flow: row nowrap;
+	flex-direction: column;
 	flex: 0 0 100%;
 	order: 0;
 	box-shadow: 0 0 2px rgb(0, 130, 160);
@@ -38,6 +40,9 @@ body {
 
 	h1 {
 		width: 100%;
+		position: absolute;
+		top: -0.625rem;
+		left: 0;
 		padding: 1rem 0;
 		font-size: 1.5rem;
 		font-family: "Aladin", cursive;
@@ -47,8 +52,8 @@ body {
 	}
 
 	a {
-		flex: 0 0 auto;
-		align-self: center;
+		/*flex: 0 0 auto;*/
+		/*align-self: center;*/
 		margin: 0.5rem;
 		text-decoration: none;
 		color: rgb(255, 255, 255);
@@ -57,18 +62,31 @@ body {
 			margin-bottom: 0.5rem;
 		}
 	}
-
-	// Button to add new card to Kanban
-	#addCard {
-		width: 4rem;
-		padding: 1rem 0;
-		font-size: 1.75rem;
-		text-align: center;
-		color: rgb(0, 0, 0);
-		background: rgb(228, 247, 250);
-		cursor: pointer;
-	}
 }
+
+#setupNav, #userNav {
+		z-index: 1;
+		position: absolute;
+		top: 0.375rem;
+		right: 0;
+		margin-right: .5rem;
+}
+
+#setupNav {
+	top: 0.625rem;
+}
+
+		// Button to add new card to Kanban
+		#addCard {
+			/*width: 4rem;*/
+			padding: 0 .375rem;
+			font-size: 1.5rem;
+			text-align: center;
+			color: rgb(0, 0, 0);
+			border-radius: 5px;
+			background: rgb(228, 247, 250);
+			cursor: pointer;
+		}
 
 // Buttons
 input[type="submit"] {
